fixed product page and footer

--- a/EcomProj2022/contact.html
+++ b/EcomProj2022/contact.html
@@ -17,7 +17,7 @@
   margin: 15px;
   box-sizing: border-box;
   border: none;
-  border-bottom: 2px solid black;
+  border-bottom: 3px solid black;
   background-color: white;
   
 }
@@ -40,8 +40,8 @@
                 <img class="shopCart" src="shopCart.jpg" alt="" width="80px" height="60px">
                 </nav>
         </header>
-  
-  <section>
+        </section>
+    <section>
    <h1 class="pageHeading">How to get more information!</h1>
     
   <form>
@@ -66,14 +66,15 @@
 <footer class="footer">
     <div class="container">
         <div class="row">
+            <img class="logo" src="webLogo.jpg" alt="" >
             <div class="footerColumn1">
               <!--  <h3>Thank you for using Cricket Supply.</h3> -->
             </div>
             <div class="footerColumn2">
                 <h3>Cricket Supply</h3>
                 <p>Bringing cricket to your front door, no matter where you are.</p>
-                <img src="webLogo.jpg" alt="" style="height: 110px; width: 100px; padding: 5px;">
         </div>
+      
         <div class="footerColumn3">
                 <h3>Follow Us</h3>
               <ul>
@@ -81,6 +82,7 @@
                   <li>Youtube</li>
               </ul>
     </div>
+   
 </footer>
 </body>
 </html>
