--- a/EcomProj2022/index.html
+++ b/EcomProj2022/index.html
@@ -28,7 +28,7 @@
     <image class="hero" alt=" ">
         <text class="hero-text">
             <h1>
-                <strong>CRICKET SUPPLY</strong>
+                <strong class="webName">CRICKET SUPPLY</strong>
             </h1>
             <p class="subheading">
                 YOUR ONE STOP SHOP
@@ -69,13 +69,13 @@
 <footer class="footer">
     <div class="container">
         <div class="row">
+            <img class="logo" src="webLogo.jpg" alt="">
             <div class="footerColumn1">
                 
             </div>
             <div class="footerColumn2">
                 <h3>Cricket Supply</h3>
                 <p>Bringing cricket to your front door, no matter where you are.</p>
-                <img src="webLogo.jpg" alt="" style="height: 110px; width: 100px; padding: 5px;">
         </div>
         <div class="footerColumn3">
                 <h3>Follow Us</h3>
