--- a/EcomProj2022/index.html
+++ b/EcomProj2022/index.html
@@ -1,3 +1,4 @@
+<!DOCTYPE html>
 <html lang="en">
 <head>
     <meta charset="UTF-8">
@@ -15,6 +16,7 @@
 
    
     <header class="'container">
+       
         <nav class="navbar"></nav>
         <nav>
             <ul>
@@ -25,7 +27,7 @@
             <img class="shopCart" src="shopCart.jpg" alt="" width="80px" height="60px">
             </nav>
     </header>
-    <image class="hero" alt=" ">
+    <image class="hero" alt="">
         <text class="hero-text">
             <h1>
                 <strong class="webName">CRICKET SUPPLY</strong>
@@ -34,20 +36,20 @@
                 YOUR ONE STOP SHOP
             </p>
             <br>
-            <a href="" class="btn">Explore Our Options &#8594</a>
+            <a href="products.html" class="btn">Explore Our Options &#8594</a>
             <br>
         </text>
     </image>
 </section>
 <br>
-<section class="categories">
+<main class="categories">
     <div class="small-container">
         <h2 class="title">Featured Products</h2>
         <br>
         <div class="row">
             <div class="column">
-                <img src="featured1.jpeg">
-                <h4>GM Cricket Bat (3 pack)</h4>
+                <img src="featured1.jpeg" alt="">
+                <h3>GM Cricket Bat (3 pack)</h3>
                 <div class="rating">
                     <i class="fa fa-star"></i>
                     <i class="fa fa-star"></i>
@@ -58,13 +60,13 @@
                 <p>$125.00</p>
             </div>
             <div>
-                <img src="gladShins.jpg" class="gladShins">
-                <h4>Gladiator Shinguards (2 pack)</h4>
+                <img src="gladShins.jpg" class="gladShins" alt="">
+                <h3>Gladiator Shinguards (2 pack)</h3>
                 <p>$35.00</p>
         </div>
     </div>
    
-</section>
+</main>
 
 <footer class="footer">
     <div class="container">
@@ -78,11 +80,11 @@
                 <p>Bringing cricket to your front door, no matter where you are.</p>
         </div>
         <div class="footerColumn3">
-                <h3>Follow Us</h3>
-              <ul>
-                  <li>Instagram</li>
-                  <li>Youtube</li>
-              </ul>
+                <h3 style="font-size: 20px;">Follow Us</h3>
+                <ul>
+                    <li><a href="https://www.instagram.com/sunny.ul/" aria-label="Instagram"><img src="InstagramLogo.jpg" style="width:80px; height:80px; margin-right: 9px;; " alt="" ></a> </li>
+                    <li><a href="https://www.youtube.com/watch?v=L9-CsjFtPc0" aria-label="YouTube" ><img src="youTubeLogo.jpg" style="width:100px; height:85px; margin-left: 40px;" alt=""> </a> </li>
+                </ul>
     </div>
 </footer>
 
