--- a/EcomProj2022/index.html
+++ b/EcomProj2022/index.html
@@ -83,7 +83,7 @@
                 <h3 style="font-size: 20px;">Follow Us</h3>
                 <ul>
                     <li><a href="https://www.instagram.com/sunny.ul/" aria-label="Instagram"><img src="InstagramLogo.jpg" style="width:80px; height:80px; margin-right: 9px;; " alt="" ></a> </li>
-                    <li><a href="https://www.youtube.com/watch?v=L9-CsjFtPc0" aria-label="YouTube" ><img src="youTubeLogo.jpg" style="width:100px; height:85px; margin-left: 40px;" alt=""> </a> </li>
+                    <li><a href="https://www.youtube.com/watch?v=L9-CsjFtPc0" aria-label="YouTube" ><img src="youTubeLogo.jpg" class="youtubeLogo" alt=""> </a> </li>
                 </ul>
     </div>
 </footer>
