--- a/EcomProj2022/contact.html
+++ b/EcomProj2022/contact.html
@@ -77,9 +77,9 @@
       
         <div class="footerColumn3">
                 <h3>Follow Us</h3>
-              <ul>
-                  <li>Instagram</li>
-                  <li>Youtube</li>
+                <ul>
+                  <li><a href="https://www.instagram.com/sunny.ul/" aria-label="Instagram"><img src="InstagramLogo.jpg" style="width:80px; height:80px; margin-right: 9px;; " alt="" ></a> </li>
+                  <li><a href="https://www.youtube.com/watch?v=L9-CsjFtPc0" aria-label="YouTube"> <img src="youTubeLogo.jpg" style="width:100px; height:85px; margin-left: 40px;" alt=""> </a> </li>
               </ul>
     </div>
    
